fix: no wrap at title of landing page

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -11,4 +11,13 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+  white-space: nowrap;
+}
+
+.VPHero .text {
+  white-space: nowrap;
+}
+
+.VPHero .tagline {
+  white-space: nowrap;
 }
